Updated HW03 and HW08 - changed screenshots.

--- a/Урок 03. Программное обеспечение ПК/Python - HW03.html
+++ b/Урок 03. Программное обеспечение ПК/Python - HW03.html
@@ -101,23 +101,22 @@
         <p>Создайте 1 текстовый документ. Для этого нажмите <span class="hl-text">Правой Кнопкой Мыши</span> на пустом
           месте, затем наведите курсор на <span class="hl-text">"New"</span> и нажмите <span class="hl-text">"Text
             Document"</span>.</p>
-        <img src="https://i.imgur.com/pfsltEx.png" alt="Creating Text Document">
+        <img src="https://i.imgur.com/32zSKuA.png" alt="Creating Text Document">
         <p>Откройте созданный документ, быстро нажав по нему 2 раза <span class="hl-text">Левой Кнопкой Мыши</span>.
           Пронумеруйте задания и записывайте их решения под соответствующим номером.</p>
         <img src="https://i.imgur.com/fp50L0g.png" alt="Homework format">
         <p>После завершения всех заданий заархивируйте документ. Для этого нажмите <span class="hl-text">Правой Кнопкой
-            Мыши</span> по созданному текстовому документу и выберите <span class="hl-text">"Add to "Название""</span>.
+            Мыши</span> по созданному текстовому документу, выберите <span class="hl-text">"Compress to..."</span> и <span class="hl-text">"ZIP File"</span>.
         </p>
-        <img src="https://i.imgur.com/hL6Rn7n.png" alt="Archiving">
+        <img src="https://i.imgur.com/cKbl90z.png" alt="Archiving">
         <p>Перейдите на сайт <a href="https://mystat.itstep.org">https://mystat.itstep.org</a> и войдите в свой аккаунт.
           Перейдите во вкладку <span class="hl-text">"Домашние задания"</span>. Наведите курсор на карточку с домашним
-          заданием и нажмите на <span class="hl-text">"Загрузить выполненное задание"</span>.</p>
-        <img src="https://i.imgur.com/s9UmXeE.png" , height="400px">
-        <p>Далее нажмите на кнопку <span class="hl-text">"Кликните здесь"</span>.</p>
-        <img src="https://i.imgur.com/ssjan5E.png" height="500px">
-        <p> Выберите созданный архив. Затем укажите время в поле <span class="hl-text">"Потрачено времени на
-            выполнение"</span> и нажмите <span class="hl-text">"Отправить"</span>.</p>
-        <img src="https://i.imgur.com/03BtfjB.png" height="100px">
+          заданием и нажмите на <span class="hl-text">Левую Кнопку Мыши</span>.</p>
+        <img src="https://i.imgur.com/vOSrtOM.png" , height="400px">
+        <p>Далее нажмите на кнопку со значком <span class="hl-text">скрепки</span> и надписью <span class="hl-text">"Загрузить"</span>.</p>
+        <img src="https://i.imgur.com/zPPYzX9.png" height="300px">
+        <p> Выберите созданный архив и нажмите <span class="hl-text">"Отправить"</span>.</p>
+        <img src="https://i.imgur.com/uS2YP6X.png" height="100px">
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 3.1</h2>
