--- a/Урок 07-09. Введение в Python/Python - HW08.html
+++ b/Урок 07-09. Введение в Python/Python - HW08.html
@@ -214,11 +214,9 @@
             class="hl-text">Левой Кнопкой Мыши</span> на <span class="hl-text">"Explorer"</span>. Откроется проводник в
           том месте, где находится Ваш файл.</p>
         <img src="https://i.imgur.com/kNb2ERu.png" alt="File location" height="600px">
-        <p>Чтобы заархивировать файл, нажмите <span class="hl-text">Правой Кнопкой Мыши</span> по файлу с кодом, затем
-          наведите курсор на <span class="hl-text">"WinRAR"</span> и нажмите <span class="hl-text">Левой Кнопкой
-            Мыши</span> по <span class="hl-text">"Add to "Название""</span>. Полученный архив отправляйте в качестве
+        <p>Чтобы заархивировать файл, нажмите <span class="hl-text">Правой Кнопкой Мыши</span> по файлу с кодом, затем выберите <span class="hl-text">"Compress to..."</span> и <span class="hl-text">"ZIP File"</span>. Полученный архив отправляйте в качестве
           выполненного домашнего задания.</p>
-        <img src="https://i.imgur.com/zMkNUCA.png" alt="Archiving" width="600px">
+        <img src="https://i.imgur.com/h8ecqO8.png" alt="Archiving" width="600px">
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 8.1</h2>
